objects/ASI_MFM_Market_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1314</fullName>
                </value>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_PP_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PP Category</label>
        <referenceTo>ASI_MFM_PP_Category__c</referenceTo>
        <relationshipLabel>Market Strategies</relationshipLabel>
        <relationshipName>Market_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Strategy_Desc__c</fullName>
        <label>Strategy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <label>Sub-brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Market Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Strategy_Desc__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Market_Strategy__c.ASI_MFM_CN_Market_Strategy</value>
        </filters>
        <label>CN Marketing Strategy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Marketing_Category</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Strategy_Desc__c</columns>
        <columns>ASI_MFM_Fiscal_Year__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_MFM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Market_Strategy__c.ASI_MFM_CN_Marketing_Category</value>
        </filters>
        <label>CN Marketing Category</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Strategy ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Strategies</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Market_Strategy</fullName>
        <active>true</active>
        <label>CN Market Strategy</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Marketing_Category</fullName>
        <active>true</active>
        <label>CN Marketing Category</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>